# Distributed-Network

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.ini  nodes.json  vcpkg.json
client/: CMakeLists.txt  http_client.cpp  main.cpp
cmake/: ProjectReaderWriterQueue.cmake
csm-common/: Common.h
csm-consensus/: CMakeLists.txt
csm-consensus/csm-raft/: CMakeLists.txt  Raft.cpp  Raft.h  RaftConfig.cpp  RaftConfig.h  RaftFactory.cpp  RaftFactory.h
csm-consensus/csm-raft/configuration/: ClusterConfiguration.cpp  ClusterConfiguration.h  ClusterConfigurationManager.cpp  ClusterConfigurationManager.h
csm-consensus/csm-raft/configuration/protocol/: configuration.proto
csm-consensus/csm-raft/node/: ClusterLocalNode.cpp  ClusterLocalNode.h  ClusterNode.h  ClusterNodeFactory.cpp  ClusterNodeFactory.h  ClusterPeerNode.cpp  ClusterPeerNode.h
csm-consensus/csm-raft/protocol/packet/: MessageBase.h  RaftMessagePack.cpp  RaftMessagePack.h  RequestVoteMessage.cpp  RequestVoteMessage.h  RequestVoteMessageReply.cpp  RequestVoteMessageReply.h  RequestVoteReplyMessage.cpp  RequestVoteReplyMessage.h
csm-consensus/csm-raft/protocol/pb/: Message.proto  RaftMessage.proto  RequestVote.proto
csm-consensus/csm-raft/protocol/utilities/: MessageEncodeHelper.cpp  MessageEncodeHelper.h
csm-consensus/csm-raft/server/: ClusterLocalServer.cpp  ClusterLocalServer.h  ClusterPeerServer.cpp  ClusterPeerServer.h  ClusterServer.h  ClusterServerFactory.cpp  ClusterServerFactory.h
csm-consensus/csm-raft/state/: LeaderState.cpp  LeaderState.h  PersistentState.cpp  PersistentState.h  VolatileState.cpp  VolatileState.h
csm-consensus/csm-raft/storage/: RaftMetadataStorage.cpp  RaftMetadataStorage.h
csm-initializer/: AppLogInitializer.cpp  AppLogInitializer.h  CMakeLists.txt  ConsensusInitializer.cpp  ConsensusInitializer.h  Initializer.cpp  Initializer.h  P2PServiceInitializer.cpp  P2PServiceInitializer.h  RpcInitializer.cpp  RpcInitializer.h  StateMachineLogInitializer.cpp  StateMachineLogInitializer.h  StorageInitializer.cpp  StorageInitializer.h  TcpServiceInitializer.cpp  TcpServiceInitializer.h
csm-packetprocess/: CMakeLists.txt
csm-rpc/: CMakeLists.txt  Rpc.cpp  Rpc.h  RpcFactory.cpp  RpcFactory.h
csm-rpc/common/: RpcServer.h
csm-rpc/config/: RpcConfig.cpp  RpcConfig.h
csm-rpc/framework/: RpcFactory.h  RpcServer.h
csm-rpc/http/: HttpRpcFactory.cpp  HttpRpcFactory.h  HttpRpcServer.cpp  HttpRpcServer.h
csm-rpc/tcp/: TcpRpcFactory.cpp  TcpRpcFactory.h  TcpRpcServer.cpp  TcpRpcServer.h
csm-service/: CMakeLists.txt  P2PService.cpp  P2PService.h  P2PServiceFactory.cpp  P2PServiceFactory.h  TcpService.cpp  TcpService.h  TcpServiceFactory.cpp  TcpServiceFactory.h
csm-stmclog/: CMakeLists.txt  Entry.cpp  Entry.h  StateMachineLog.cpp  StateMachineLog.h  StateMachineLogConfig.cpp  StateMachineLogConfig.h  StateMachineLogFactory.cpp  StateMachineLogFactory.h
csm-stmclog/protocol/packet/: Entry.cpp  Entry.h
csm-stmclog/protocol/pb/: entry.proto
csm-storage/: CMakeLists.txt  RocksDBStorage.cpp  RocksDBStorage.h  Storage.h  StorageFactory.cpp  StorageFactory.h
csm-tool/: CMakeLists.txt  ClusterConfigurationSerializer.cpp  ClusterConfigurationSerializer.h  NodeConfig.cpp  NodeConfig.h
csm-utilities/: CMakeLists.txt  ElapsedTime.h  FileSystemTools.cpp  FileSystemTools.h  JsonExtractHelper.h  Logger.cpp  Logger.h  RingBuffer.h  (+19 more)
libcomponents/: CMakeLists.txt  CellTimestamp.cpp  CellTimestamp.h  Logger.cpp  Logger.h  RingBuffer.cpp  RingBuffer.h  SPSCLockLessQueue.h  SelectListenner.cpp  SelectListenner.h  Singleton.h  Socket.cpp  Socket.h  StringTool.cpp  StringTool.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  UUIDTool.cpp  UUIDTool.h
libpacketprocess/: CMakeLists.txt  PacketFactory.cpp  PacketFactory.h  PacketProcessor.cpp  PacketProcessor.h
libpacketprocess/concept/: PacketConcept.h
libpacketprocess/packet/: PacketBase.cpp  PacketBase.h  PacketClientInfo.cpp  PacketClientInfo.h  PacketClientInfoReply.cpp  PacketClientInfoReply.h  PacketHeader.cpp  PacketHeader.h  PacketHeartBeat.cpp  PacketHeartBeat.h  PacketHeartBeatReply.cpp  PacketHeartBeatReply.h  PacketRawString.cpp  PacketRawString.h  PacketRawStringReply.cpp  PacketRawStringReply.h  PacketReplyBase.h
libpacketprocess/processor/: PacketProcessorBase.h  PacketProcessorFactory.cpp  PacketProcessorFactory.h  PacketRawStringProcessor.cpp  PacketRawStringProcessor.h
libpacketprocess/protocol/: clientinfo.proto  heartbeat.proto  packet_header.proto
libreactor/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  ClientAliveChecker.cpp  ClientAliveChecker.h  ServerConfig.cpp  ServerConfig.h  SlaveReactor.cpp  SlaveReactor.h  SlaveReactorManager.cpp  SlaveReactorManager.h  TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h
libservice/: Acceptor.cpp  CMakeLists.txt  ClientAliveChecker.h  HostsConnector.cpp  HostsConnector.h  HostsHeartbeatService.h  HostsInfoManager.cpp  ServiceConfig.cpp  ServiceConfig.h  SlaveReactor.cpp  SlaveReactor.h  SlaveReactorManager.cpp  SlaveReactorManager.h  TcpService.cpp  TcpService.h  TcpServiceFactory.cpp  TcpServiceFactory.h  TcpSession.cpp  TcpSession.h
libservice/config/: ServiceConfig.cpp  ServiceConfig.h
libservice/host/: HostEndPointInfo.h  HostsConnector.cpp  HostsConnector.h  HostsHeartbeatService.cpp  HostsHeartbeatService.h  HostsInfoManager.cpp  HostsInfoManager.h
libservice/protocol/: PacketHeader.cpp  PacketHeader.h
libservice/protocol/packet/: PacketClientInfo.cpp  PacketClientInfo.h  PacketClientInfoReply.cpp  PacketClientInfoReply.h  PacketHeartBeat.cpp  PacketHeartBeat.h  PacketHeartBeatReply.cpp  PacketHeartBeatReply.h
libservice/protocol/pb/: clientinfo.proto
libservice/service/: Acceptor.cpp  Acceptor.h  ClientAliveChecker.cpp  ClientAliveChecker.h  SlaveReactor.cpp  SlaveReactor.h  SlaveReactorManager.cpp  SlaveReactorManager.h  TcpSession.cpp  TcpSession.h  TcpSessionFactory.cpp  TcpSessionFactory.h
libtools/: CMakeLists.txt  NodeConfig.cpp  NodeConfig.h
unittest/: CMakeLists.txt  DistanceVectorTest.cpp  HttpLibTest.cpp  RingBufferTest.cpp
(+142 files in other folders)
